--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -5,6 +5,9 @@
     height: 2.5rem;
     justify-content: space-between;
     padding-top: 1rem;
+    position: fixed;
+    top: 0;
+    width: 100%
   }
   .left-side-navbar-items {
     padding: 1rem;
@@ -15,3 +18,4 @@
     padding: 1.5rem;
     color: #FBEEC1;
   }
+
