--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,9 +1,12 @@
+.section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
 
-
-
-
-
-.contents{
+.contents {
   display: flex;
   justify-content: space-evenly;
 }
@@ -13,36 +16,39 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  right: 40%;
-  top: 14rem;
+  right: 90%;
+  bottom: 10rem;
   color: #E0A96D;
   font-size: 1.8rem;
 }
-.right-side-navbar-items:hover, .left-side-navbar-items:hover {
-    color: gold; 
-    font-weight: bold; 
-    cursor: pointer;
-    font-size: 2rem;
-  }
 
 .right-side-content-items{
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
-  left: 40%;
-  top: 40rem;
+  left: 90%;
+  top: 20rem;
   color: #E0A96D;
   font-size: 1.8rem;
 }
 
-.logo-container {
-  position: fixed;
+/* .logo-container {
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: -1;
+} */
+.logo-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  /* overflow: hidden; */
 }
 
 .pernLogo {
