--- a/src/components/home.css
+++ b/src/components/home.css
@@ -33,14 +33,6 @@
   font-size: 1.8rem;
 }
 
-/* .logo-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-} */
 .logo-container {
   position: absolute;
   top: 0;
@@ -48,10 +40,30 @@
   width: 100%;
   height: 100%;
   z-index: -1;
-  /* overflow: hidden; */
+  visibility: visible;
+  overflow: hidden;
 }
 
+.logo-container svg path {
+  stroke-dasharray: 629.2;
+  stroke-dashoffset: 629.2;
+  animation: fillScreen 2s forwards;
+}
+
+@keyframes fillScreen {
+  0% {
+    stroke-dashoffset: 629.2;
+  }
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+
+.fill-screen {
+  stroke-dashoffset: 0;
+}
 .pernLogo {
   opacity: 0.4;
   pointer-events: none;
-}
+} 
+
