--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,13 @@
 html {
   width: 100vw;
-  background-color: #4E312D;
+  height: 100vh;
   overflow-x: hidden;
   scroll-behavior: smooth;
+}
+
+body {
+  margin: 0;
+  padding: 0;
 }
 
 .font1{
@@ -16,3 +21,12 @@ html {
 }
 
 /* Hex codes: Beige #DDC3A5, Black-brown #201E20, Tan #E0A96D */
+
+/* body::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  -ms-overflow-style: none; 
+  scrollbar-width: none;
+} */
