--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -6,8 +6,10 @@
     justify-content: space-between;
     padding-top: 1rem;
     position: fixed;
-    top: 0;
-    width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
   }
   .left-side-navbar-items {
     padding: 1rem;
