--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,7 @@ body {
   -ms-overflow-style: none; 
   scrollbar-width: none;
 } */
+/* 
+Dark gray: #333333
+Black: #000000
+Light tan: #E8D0A9 */
