--- a/src/components/mainpage/Mainpage.css
+++ b/src/components/mainpage/Mainpage.css
@@ -12,7 +12,7 @@
   scroll-snap-align: start;
 }
 #section1 {
-    background-color: #4E312D;
+    background-color: #0C0C0C;
   } 
   #section2 {
     background-color: #E0A96D;
