--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -17,6 +17,9 @@
   justify-content: center;
   font-size: 5rem;
   color: white;
+  z-index: 2;
+  width: 55rem;
+  height: 15rem;
 }
 .left-side-content-items {
   display: flex;
@@ -38,7 +41,7 @@
   align-items: center;
   position: relative;
   left: 20%;
-  top: 25rem;
+  top: 30rem;
   color:  #B5B5B5;
   font-size: 1.5rem;
 }
@@ -77,3 +80,27 @@
   pointer-events: none;
 } 
 
+@media screen and (max-width: 768px) {
+  .middle-contents {
+    position: absolute;
+    font-size: 2rem;
+    width: 40rem;
+    height: 10rem;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .left-side-content-items {
+    flex-direction: row;
+    bottom: 10;
+    gap: 2rem;
+  }
+  
+  .right-side-content-items {
+    top: 20rem;
+    font-size: 1rem;
+    gap: 2rem;
+    flex-direction: row;
+    left: 0;
+  }
+}
