--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,3 +1,34 @@
 .about-container{
-    
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.left-section-about{
+    background-color: aliceblue;
+    flex: 2;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.middle-section-about{
+    background-color:gainsboro;
+    flex: 1;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.right-section-about{
+    background-color:gray;
+    height: 100%;
+    flex: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
