--- a/src/components/mainpage/Mainpage.css
+++ b/src/components/mainpage/Mainpage.css
@@ -5,18 +5,15 @@
 }
 
 .section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   height: 100vh;
-  scroll-snap-align: start;
+  /* scroll-snap-align: start; */
 }
 #section1 {
     background-color: #0C0C0C;
   } 
-  #section2 {
+  /* #section2 {
     background-color: #E0A96D;
-  } 
+  }  */
    #section3 {
     background-color: red;
   }
