--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,17 @@
+html::-webkit-scrollbar {
+  display: none;
+}
+
 html {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
   width: 100vw;
   height: 100vh;
   overflow-x: hidden;
   scroll-behavior: smooth;
   background-color: white;
 }
+
 
 body {
   margin: 0;
