--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,4 +1,4 @@
-.contents {
+#home-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -7,7 +7,7 @@
   position: relative;
 }
 
-.left-side-container {
+#left-side-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -22,15 +22,16 @@
   flex-direction: column;
   align-items: center;
   font-size: 1.5rem;
-  color:   #B5B5B5;
+  color:   #aaa;
 }
-.left-side-content-wrapper {
-  position: relative;
-  bottom: 20rem; 
+
+.left-side-content-wrapper{
+  margin: 0 0 40rem 2rem;
+  
 }
 
 
-.middle-container {
+#middle-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -41,11 +42,12 @@
 
 .middle-content-items{
   color: white;
-  font-size: 4rem;
+  font-size: 6rem;
   font-weight: bolder;
+  line-height: 5rem;
 }
 
-.right-side-container {
+#right-side-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -63,8 +65,7 @@
 }
 
 .right-side-content-wrapper {
-  position: relative;
-  top: 20rem; 
+  margin: 40rem 2rem 0 0;
 }
 
 .logo {
