--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,7 +1,7 @@
 .navbar {
   display: flex;
   font-size: 1rem;
-  border-bottom: 0.5px solid white;
+  border-bottom: 0.5px solid #ff5277;
   height: 2.5rem;
   justify-content: space-between;
   padding-top: 1rem;
@@ -15,17 +15,17 @@
 
 .left-side-navbar-items {
   padding: 0.8rem;
-  color: #FBEEC1;
+  color: #ff5277;
 }
 
 .right-side-navbar-items {
   padding: 1.5rem;
-  color: #E8D0A9;
+  color: #ff5277;
 }
 
 .right-side-navbar-items:hover,
 .left-side-navbar-items:hover {
-  color: gold;
+  color: #ff5277;
   font-weight: bold;
   cursor: pointer;
   font-size: 2rem;
