--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -25,7 +25,7 @@
 
 .right-side-navbar-items:hover,
 .left-side-navbar-items:hover {
-  color: #ff5277;
+  color: white;
   font-weight: bold;
   cursor: pointer;
   font-size: 2rem;
