--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -276,10 +276,9 @@
   left: 59.5%;
   cursor: pointer;
 }
-/* .github-project-arti:hover,
+.github-project-arti:hover,
 .github-project-openShop:hover,
 .github-project-pangea:hover,
 .github-project-youNo:hover{
- border: 2px solid #ff5277;
- cursor: pointer;
-} */
+opacity: 0.7;
+}
