--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -65,3 +65,51 @@
 
 
 
+.resume-preview {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .preview-content {
+    max-width: 90%;
+    max-height: 90%;
+    overflow: auto;
+  }
+  
+  .preview-content img {
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+    margin: 0 auto;
+  }
+
+  .close-icon{
+    color: white;
+    font-size: 3rem;
+    position: absolute;
+    left:85%;
+    bottom: 50%;
+  }
+  .close-icon:hover{
+    color: #ff5277;
+    cursor: pointer;
+  }
+
+  .download-icon{
+    color: white;
+    position: absolute;
+    right:82%;
+    bottom: 50%;
+    font-size: 3rem;
+  }
+  .download-icon:hover{
+    cursor: pointer;
+    color: #ff5277;
+  }
