--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,31 @@
 html::-webkit-scrollbar {
   display: none;
 }
+/* Hide the scrollbar track */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Style the scrollbar thumb */
+::-webkit-scrollbar-thumb {
+  background: #ff5277;
+  border-radius: 5px;
+}
+
+/* Style the scrollbar thumb on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: white;
+}
 
 html {
   width: 100vw;
   height: 100vh;
   overflow-x: hidden;
-  background-color: white;
+  background-color: #111;
 }
 
 
