--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,6 +1,6 @@
 #contact-container{
     height: 100%;
-    background-color: black;
+    background-color: #111;
 }
 
 #contact-wrapper{
@@ -35,6 +35,7 @@
     height: 5rem;
     width: 10rem;
     object-fit: contain;
+    margin-bottom: 0.5rem;
 }
 
 
@@ -44,7 +45,7 @@
   }
   
   #get-in-touch{
-    color: white;
+    color: #ca9558;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 4rem;
 }
