--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,113 +1,3 @@
-/* #home-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  height: 100%;
-  width: 100%;
-  position: relative;
-}
-
-#left-side-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex: 1;
-  background-color: #111;
-}
-
-
-.left-side-content-items {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: 1.5rem;
-  color:   #aaa;
-}
-.left-side-content-wrapper{
-  margin: 0 0 40rem 2rem;
-}
-
-
-#middle-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex: 2;
-  background-color: #111;
-}
-
-.middle-content-items{
-  color: #ca9558;
-  font-size: 6rem;
-  font-weight: bolder;
-  line-height: 5rem;
-}
-
-#right-side-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex: 1;
-  background-color: #111;
-}
-
-.right-side-content-items{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: 2rem;
-  color:   #B5B5B5;
-}
-
-.right-side-content-wrapper {
-  margin: 40rem 2rem 0 0;
-}
-
-
-
-@media only screen and (max-width: 576px){
-  .left-side-content-items{
-    font-size: 0.5rem;
-    margin-left: 1rem;
-  }
-  .right-side-content-items{
-    font-size: 0.5rem;
-  }
-  .right-side-content-wrapper {
-    top: 15rem; 
-  }
-  .left-side-content-wrapper {
-    bottom: 15rem; 
-  }
-  .middle-content-items{
-    font-size: 1rem;
-  }
-}
-
-
-@media only screen and (min-width:769px) and (max-width: 1900px){
-    .left-side-content-items{
-    font-size: 1rem;
-    margin-left: 1rem;
-  }
-  .right-side-content-items{
-    font-size: 1rem;
-  }
-  .right-side-content-wrapper {
-    top: 25rem; 
-  }
-  .left-side-content-wrapper {
-    bottom: 25rem; 
-  }
-  .middle-content-items{
-    font-size: 2.4rem;
-  }
-}   */
-
-
  #home-container {
   display: flex;
   flex-direction: column;
@@ -126,7 +16,7 @@
 #top-section,#bottom-section{
   color: #aaa;
   font-family:cursive;
-  font-size: 1rem;
+  font-size: 1.5rem;
 }
 
 #top-section{
@@ -135,8 +25,8 @@
   flex-direction: row;
 }
 .top-section-contents{
-  width: 10rem;
-  margin: 5rem 20rem;
+  width: 15rem;
+  margin: 5rem 17rem;
 }
 
 
@@ -147,9 +37,9 @@
 }
 
 .middle-section-content-words{
-  width: 40rem;
+  width: 60rem;
   color: #ca9558;
-  font-size: 4rem;
+  font-size: 6rem;
   font-weight: bolder;
   line-height: 5rem;
 }
@@ -160,6 +50,57 @@
   flex-direction: row;
 }
 .bottom-section-contents{
-  width: 10rem;
-  margin: 5rem 20rem;
+  width: 15rem;
+  margin: 5rem 17rem;
 }
+
+
+@media only screen and (max-width: 768px){
+    #top-section{
+      display: flex;
+      flex-direction: column;
+    }  
+  .top-section-contents{
+      font-size: 1rem;
+      margin: 0;
+    }
+    .middle-section-content-words{
+      font-size: 2rem;
+      margin-left: 13rem;
+    }
+    .bottom-section-contents{
+      font-size: 1rem;
+      margin: 0;
+    }
+    #bottom-section{
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 10rem;
+    }  
+}
+
+
+@media only screen and (min-width:769px) and (max-width: 1600px){
+  #top-section{
+    display: flex;
+    flex-direction: column;
+  }  
+.top-section-contents{
+    font-size: 1.5rem;
+    margin: 0;
+    width: 15rem;
+  }
+  .middle-section-content-words{
+    font-size: 4rem;
+  }
+  .bottom-section-contents{
+    font-size: 1.5rem;
+    margin: 0;
+    width: 15rem;
+  }
+  #bottom-section{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10rem;
+  }  
+}   
