--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -287,15 +287,195 @@
 opacity: 0.7;
 }
 
-@media only screen and (max-width: 768px){
 
+
+@media only screen and (max-width: 388px){
+  
+  .title-section {
+    font-size: 2rem;
+  }
+
+  .projects-section-wrapper {
+    margin-top: 1rem;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .right-section-projects,
+  .left-section-projects {
+    margin: 1rem;
+  }
+
+  .project1-section,
+  .project2-section,
+  .project3-section,
+  .project4-section {
+    margin-bottom: 1rem;
+    width: 100%;
+    height: 50%;
+    box-shadow: none;
+  }
+
+  .projects-title-left,
+  .projects-title-right {
+    font-size: 1rem;
+    color: #ff5277;
+  }
+  .projects-img{
+    width: 20rem;
+    height: 4rem;
+    margin-left: 10rem;
+    object-fit: contain;
+  }
+  
+  .github-project-arti,.github-project-openShop,.github-project-pangea,.github-project-youNo
+  {
+    display: none;
+  }
+  .project1-section:hover,.project2-section:hover,.project3-section:hover,.project4-section:hover{
+    display: none;
+  }
+  .projects-img:hover{
+    display: none;
+  }
+  .projects-techstack-arti, .projects-techstack-openShop, .projects-techstack-pangea, .projects-techstack-youNo{
+    display: none;
+  }
+  .border-middle-projects-arti,
+  .border-middle-projects-pangea,
+  .border-middle-projects-openShop,
+  .border-middle-projects-youNo, 
+  .border-projects-arti,
+  .border-projects-openShop,
+  .border-projects-pangea,
+  .border-projects-youNo{
+    display: none;
+  }
 }
 
+@media only screen and (min-width:389px) and (max-width: 769px){
+  .title-section {
+    font-size: 2rem;
+  }
 
-@media only screen and (min-width:769px) and (max-width: 1350px){
+  .projects-section-wrapper {
+    margin-top: 1rem;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 
-}   
+  .right-section-projects,
+  .left-section-projects {
+    margin: 1rem;
+  }
 
-@media only screen and (min-width:1351px) and (max-width: 1700px){
+  .project1-section,
+  .project2-section,
+  .project3-section,
+  .project4-section {
+    margin-bottom: 1rem;
+    width: 100%;
+    height: 50%;
+    box-shadow: none;
+  }
 
+  .projects-title-left,
+  .projects-title-right {
+    font-size: 1rem;
+    color: #ff5277;
+  }
+  .projects-img{
+    width: 20rem;
+    height: 7rem;
+    margin-left: 10rem;
+    object-fit: contain;
+  }
+  
+  .github-project-arti,.github-project-openShop,.github-project-pangea,.github-project-youNo
+  {
+    display: none;
+  }
+  .project1-section:hover,.project2-section:hover,.project3-section:hover,.project4-section:hover{
+    display: none;
+  }
+  .projects-img:hover{
+    display: none;
+  }
+  .projects-techstack-arti, .projects-techstack-openShop, .projects-techstack-pangea, .projects-techstack-youNo{
+    display: none;
+  }
+  .border-middle-projects-arti,
+  .border-middle-projects-pangea,
+  .border-middle-projects-openShop,
+  .border-middle-projects-youNo, 
+  .border-projects-arti,
+  .border-projects-openShop,
+  .border-projects-pangea,
+  .border-projects-youNo{
+    display: none;
+  }
+}
+
+@media only screen and (min-width:769px) and (max-width: 1600px){
+      
+  .title-section {
+    font-size: 2rem;
+  }
+
+  .projects-section-wrapper {
+    margin-top: 1rem;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .right-section-projects,
+  .left-section-projects {
+    margin: 1rem;
+  }
+
+  .project1-section,
+  .project2-section,
+  .project3-section,
+  .project4-section {
+    margin-bottom: 1rem;
+    width: 100%;
+    height: 50%;
+    box-shadow: none;
+  }
+
+  .projects-title-left,
+  .projects-title-right {
+    font-size: 1rem;
+    color: #ff5277;
+  }
+  .projects-img{
+    width: 20rem;
+    height: 10rem;
+    margin-left: 10rem;
+    object-fit: contain;
+  }
+  
+  .github-project-arti,.github-project-openShop,.github-project-pangea,.github-project-youNo
+  {
+    display: none;
+  }
+  .project1-section:hover,.project2-section:hover,.project3-section:hover,.project4-section:hover{
+    display: none;
+  }
+  .projects-img:hover{
+    display: none;
+  }
+  .projects-techstack-arti, .projects-techstack-openShop, .projects-techstack-pangea, .projects-techstack-youNo{
+    display: none;
+  }
+  .border-middle-projects-arti,
+  .border-middle-projects-pangea,
+  .border-middle-projects-openShop,
+  .border-middle-projects-youNo, 
+  .border-projects-arti,
+  .border-projects-openShop,
+  .border-projects-pangea,
+  .border-projects-youNo{
+    display: none;
+  }
 }   
