--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -15,7 +15,6 @@
 
 #top-section,#bottom-section{
   color: #aaa;
-  font-family:cursive;
   font-size: 1.5rem;
 }
 
@@ -55,18 +54,18 @@
 }
 
 
-@media only screen and (max-width: 768px){
-    #top-section{
-      display: flex;
-      flex-direction: column;
-    }  
+@media only screen and (max-width: 389px){
   .top-section-contents{
       font-size: 1rem;
-      margin: 0;
+      width: 100%;
+      margin: 5rem 0 10rem 2rem;
     }
+
+
     .middle-section-content-words{
       font-size: 2rem;
-      margin-left: 33rem;
+      margin-left: 34rem;
+      margin-bottom: 10rem;
     }
     .bottom-section-contents{
       font-size: 1rem;
@@ -74,35 +73,59 @@
     }
     #bottom-section{
       display: flex;
-      flex-direction: column;
-      margin-bottom: 10rem;
+      flex-direction: row;
+      margin: 0 0 10rem 5rem;
+      width: 100%;
     }  
 }
 
-
-@media only screen and (min-width:769px) and (max-width: 1600px){
-  #top-section{
-    display: flex;
-    flex-direction: column;
-  }  
-.top-section-contents{
-    font-size: 1.5rem;
-    margin: 0;
-    width: 15rem;
+@media only screen and (min-width:390px) and (max-width: 800px){
+  .top-section-contents{
+    font-size: 1rem;
+    width: 100%;
+    margin: 6rem 0 10rem 2rem;
   }
   .middle-section-content-words{
-    font-size: 4rem;
+    font-size: 2rem;
+    margin-left: 34rem;
+    margin-bottom: 10rem;
   }
   .bottom-section-contents{
-    font-size: 1.5rem;
+    font-size: 1.1rem;
     margin: 0;
-    width: 15rem;
   }
   #bottom-section{
     display: flex;
-    flex-direction: column;
-    margin-bottom: 10rem;
+    flex-direction: row;
+    margin: 0 0 15rem 5rem;
+    width: 100%;
   }  
+}
+
+
+
+
+@media only screen and (min-width:801px) and (max-width: 1600px){
+  .top-section-contents{
+    font-size: 2rem;
+    width: 100%;
+    margin: 5rem 0 15rem 4rem;
+  }
+  .middle-section-content-words{
+    font-size: 4rem;
+    margin-left: 20rem;
+    margin-bottom: 10rem;
+  }
+  .bottom-section-contents{
+    font-size: 2rem;
+    margin: 0;
+  }
+  #bottom-section{
+    display: flex;
+    flex-direction: row;
+    margin: 0 0 15rem 10rem;
+    width: 100%;
+  } 
 }
 @media only screen and (min-width:1601px) and (max-width: 1700px){
     .top-section-contents,.bottom-section-contents{
