--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -38,6 +38,7 @@
 @media only screen and (max-width: 576px) {
   .right-side-navbar {
     display: none;
+    
   }
 
   .hamburger-menu {
@@ -68,8 +69,11 @@
 
   .right-side-navbar-items {
     color: white;
-    font-size: 2rem;
+    font-size: 3rem;
     padding: 1rem;
+  }
+  .right-side-navbar-items:last-child{
+    margin-bottom: 20rem;
   }
   
   .left-side-navbar-items {
