--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -173,7 +173,7 @@
 
 
 
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 389px){
     #about-container{
         display: flex;
         flex-direction: column;
@@ -181,7 +181,8 @@
        } 
        .left-section-contents{
         font-size: 0.5rem;
-        margin: 0 0.5rem;
+        margin: 0.5rem;
+        line-height: normal;
        }
        .name-tag{
         font-size: 1rem;
@@ -201,7 +202,47 @@
        }
        .frontend-images, .backend-images,.misc-images{
         height: 2rem;
-        width: 1rem;
+        width: 2rem;
+        object-fit: contain;
+       }
+       .misc-images:last-child{
+        margin-left: 2.5em; 
+    }
+        .frontend-images:last-child{
+            margin: 0 2.5rem;
+        }
+}
+
+@media only screen and (min-width:390px) and (max-width: 800px){
+    #about-container{
+        display: flex;
+        flex-direction: column;
+        height: 70%;
+       } 
+       .left-section-contents{
+        font-size: 0.5rem;
+        margin: 0.5rem;
+        line-height: normal;
+       }
+       .name-tag{
+        font-size: 1rem;
+        margin: 0;
+       }
+       #middle-section-about{
+        height: 15rem;
+       }
+       #profileLogo{
+        height: 10rem;
+       }
+       #right-section-about{
+        height: 2rem;
+       }
+       .right-section-contents{
+        font-size: 1rem;
+       }
+       .frontend-images, .backend-images,.misc-images{
+        height: 2rem;
+        width: 2rem;
         object-fit: contain;
        }
        .misc-images:last-child{
@@ -213,7 +254,7 @@
 }
 
 
-@media only screen and (min-width:769px) and (max-width: 1350px){
+@media only screen and (min-width:801px) and (max-width: 1600px){
     #about-container{
         display: flex;
         flex-direction: column;
@@ -243,7 +284,7 @@
         }
 }   
 
-@media only screen and (min-width:1351px) and (max-width: 1700px){
+@media only screen and (min-width:1601) and (max-width: 1700px){
 .name-tag{
     font-size: 1.5rem;
 }
