--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -314,6 +314,7 @@ opacity: 0.7;
     width: 100%;
     height: 50%;
     box-shadow: none;
+
   }
 
   .projects-title-left,
@@ -394,15 +395,19 @@ opacity: 0.7;
   .github-project-arti,.github-project-openShop,.github-project-pangea,.github-project-youNo
   {
     display: none;
+    pointer-events: none;
   }
   .project1-section:hover,.project2-section:hover,.project3-section:hover,.project4-section:hover{
     display: none;
+    pointer-events: none;
   }
   .projects-img:hover{
     display: none;
+    pointer-events: none;
   }
   .projects-techstack-arti, .projects-techstack-openShop, .projects-techstack-pangea, .projects-techstack-youNo{
     display: none;
+    pointer-events: none;
   }
   .border-middle-projects-arti,
   .border-middle-projects-pangea,
@@ -413,6 +418,7 @@ opacity: 0.7;
   .border-projects-pangea,
   .border-projects-youNo{
     display: none;
+    pointer-events: none;
   }
 }
 
@@ -457,15 +463,20 @@ opacity: 0.7;
   
   .github-project-arti,.github-project-openShop,.github-project-pangea,.github-project-youNo
   {
+    pointer-events: none;
     display: none;
+
   }
   .project1-section:hover,.project2-section:hover,.project3-section:hover,.project4-section:hover{
+    pointer-events: none;
     display: none;
   }
   .projects-img:hover{
+    pointer-events: none;
     display: none;
   }
   .projects-techstack-arti, .projects-techstack-openShop, .projects-techstack-pangea, .projects-techstack-youNo{
+    pointer-events: none;
     display: none;
   }
   .border-middle-projects-arti,
@@ -476,6 +487,7 @@ opacity: 0.7;
   .border-projects-openShop,
   .border-projects-pangea,
   .border-projects-youNo{
+    pointer-events: none;
     display: none;
   }
 }   
